--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,40 +21,45 @@
     height:80px;
     background-color:white;
    }
-   
+
    #header h1 {
     margin:0;
    }
-   
+
    #header ul {
     margin:0;
     padding:8px 10px 3px 10px;
     font-size:70%;
     text-align:right;
    }
-   
+
    #header li {
     margin:0 0 5px 0;
     line-height:1.32em;
    }
-   
+
    #header img {
     float:left;
    }
 
    #footer {
+    position: fixed;
+    /* bottom: 0px; */
+    left: 0px;
+    /* width: 100%; */
+    /* height: 140px; */
     width:100%;
     clear:both;
-    padding: 30px 0;
-    position: absolute;
+    padding:0;
+    /* position: absolute; */
     bottom: 0;
    }
-   
+
    #footer a {
     color:#fff;
     text-decoration:none;
    }
-   
+
    #footer p {
     margin:0;
     padding:3px 5px;
@@ -65,21 +70,28 @@
     line-height:1.32em;
     font-family:verdana;
    }
-   
+
    #footer div {
     padding:10px;
     background:#eeeeff;
     color:#333366;
     font-size:70%;
-    border-bottom:1px solid #ccc;	
+    border-bottom:1px solid #ccc;
    }
-   
+
    #footer div a {
     color:#3366cc;
     text-decoration:none;
    }
-   
+
    #footer div a:hover {
     color:white;
    }
-   
+
+   div#footer-fixed{
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 140px;
+    }
