--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -19,5 +19,7 @@
   <%= @feed.user_id %>
 </p>
 
+<%= render 'favorites/like_button', feed: @feed %>
+
 <%= link_to 'Edit', edit_feed_path(@feed) %> |
 <%= link_to 'Back', feeds_path %>
