--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,84 +14,89 @@
  *= require_self
  */
 
- #header {
-    width:100%;
-    min-height:80px;
-    height:auto !important;
-    height:80px;
-    background-color:white;
-   }
+#header {
+   width:100%;
+   min-height:140px;
+   height:auto !important;
+   height:140px;
+   background-color:white;
+   text-align: center;
+}
 
-   #header h1 {
-    margin:0;
-   }
+#header a {
+   font-size: large;
+}
 
-   #header ul {
-    margin:0;
-    padding:8px 10px 3px 10px;
-    font-size:70%;
-    text-align:right;
-   }
+#header h1 {
+   margin:0;
+}
 
-   #header li {
-    margin:0 0 5px 0;
-    line-height:1.32em;
-   }
+#header ul {
+   margin:0;
+   padding:8px 10px 3px 10px;
+   font-size:70%;
+   text-align:right;
+}
 
-   #header img {
-    float:left;
-   }
+#header li {
+   margin:0 0 5px 0;
+   line-height:1.32em;
+}
 
-   #footer {
-    position: fixed;
-    /* bottom: 0px; */
-    left: 0px;
-    /* width: 100%; */
-    /* height: 140px; */
-    width:100%;
-    clear:both;
-    padding:0;
-    /* position: absolute; */
-    bottom: 0;
-   }
+#header img {
+   float:left;
+}
 
-   #footer a {
-    color:#fff;
-    text-decoration:none;
-   }
+#footer {
+   position: fixed;
+   /* bottom: 0px; */
+   left: 0px;
+   /* width: 100%; */
+   /* height: 140px; */
+   width:100%;
+   clear:both;
+   padding:0;
+   /* position: absolute; */
+   bottom: 0;
+}
 
-   #footer p {
-    margin:0;
-    padding:3px 5px;
-    color:turquoise;
-    background:white;
-    font-size:65%;
-    text-align:right;
-    line-height:1.32em;
-    font-family:verdana;
-   }
+#footer a {
+   color:#fff;
+   text-decoration:none;
+}
 
-   #footer div {
-    padding:10px;
-    background:#eeeeff;
-    color:#333366;
-    font-size:70%;
-    border-bottom:1px solid #ccc;
-   }
+#footer p {
+   margin:0;
+   padding:3px 5px;
+   color:turquoise;
+   background:white;
+   font-size:65%;
+   text-align:right;
+   line-height:1.32em;
+   font-family:verdana;
+}
 
-   #footer div a {
-    color:#3366cc;
-    text-decoration:none;
-   }
+#footer div {
+   padding:10px;
+   background:#eeeeff;
+   color:#333366;
+   font-size:70%;
+   border-bottom:1px solid #ccc;
+}
 
-   #footer div a:hover {
-    color:white;
-   }
+#footer div a {
+   color:#3366cc;
+   text-decoration:none;
+}
 
-   div#footer-fixed{
-    position: fixed;
-    bottom: 0px;
-    left: 0px;
-    width: 100%;
-    height: 140px;
-    }
+#footer div a:hover {
+   color:white;
+}
+
+div#footer-fixed{
+   position: fixed;
+   bottom: 0px;
+   left: 0px;
+   width: 100%;
+   height: 140px;
+   }
