--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,8 +17,10 @@
         <td><%= user.name %></td>
         <td><%= user.email %></td>
         <td><%= link_to 'Show', user %></td>
-        <td><%#= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%#= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if user.id == current_user.id %>
+        <td><%= link_to 'edit', edit_user_path(user) %></td>
+        <% else %>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
