delete_edit_destroy

--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -22,8 +22,10 @@
         <td><%= image_tag feed.image.url %></td>
         <% end %>
         <td><%= link_to 'Show', feed %></td>
-        <td><%= link_to 'Edit', edit_feed_path(feed) %></td>
-        <td><%= link_to 'Destroy', feed, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if feed.user.id == current_user.id %>
+          <td><%= link_to 'Edit', edit_feed_path(feed) %></td>
+          <td><%= link_to 'Destroy', feed, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
