--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,8 +18,8 @@
         <td><%= user.email %></td>
         <td><%= link_to 'Show', user %></td>
         <% if user.id == current_user.id %>
-        <td><%= link_to 'edit', edit_user_path(user) %></td>
-        <% else %>
+          <td><%= link_to 'edit', edit_user_path(user) %></td>
+          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
     <% end %>
